--- a/SFML2/SFML2.vcxproj
+++ b/SFML2/SFML2.vcxproj
@@ -209,6 +209,9 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="D:\STUDIA\Screenshot.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
