--- a/SFML2/SFML2.vcxproj.filters
+++ b/SFML2/SFML2.vcxproj.filters
@@ -195,4 +195,9 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="D:\STUDIA\Screenshot.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
